养护二级页面

--- a/views/green_planting.html
+++ b/views/green_planting.html
@@ -45,7 +45,7 @@
 <body>
     <div>
         {{each green item}}
-        <a href="{{item.id}}" class="show-box">
+        <a href="/single_detail" class="show-box {{item.id}}">
             <div class="pic"><img src="{{item.img}}" alt=""></div>
             <p class="f12">{{item.p}}</p>
         </a>
