--- a/views/mini.html
+++ b/views/mini.html
@@ -55,7 +55,7 @@
 
 <body>
 <div>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201121</p>
             <p class="f14">插画指南</p>
@@ -64,7 +64,7 @@
             <img src="./imges/发现/养护/mini1.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201121</p>
             <p class="f14">插画指南</p>
@@ -73,7 +73,7 @@
             <img src="./imges/发现/养护/mini2.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201114</p>
             <p class="f14">插画指南</p>
@@ -83,7 +83,7 @@
             <img src="./imges/发现/养护/mini3.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201114</p>
             <p class="f14">插画指南</p>
@@ -93,7 +93,7 @@
             <img src="./imges/发现/养护/mini4.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201107</p>
             <p class="f14">插画指南</p>
@@ -102,7 +102,7 @@
             <img src="./imges/发现/养护/mini5.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201107</p>
             <p class="f14">插画指南</p>
@@ -111,7 +111,7 @@
             <img src="./imges/发现/养护/mini6.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201121</p>
             <p class="f14">插画指南</p>
@@ -120,7 +120,7 @@
             <img src="./imges/发现/养护/mini1.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201121</p>
             <p class="f14">插画指南</p>
@@ -129,7 +129,7 @@
             <img src="./imges/发现/养护/mini2.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201114</p>
             <p class="f14">插画指南</p>
@@ -139,7 +139,7 @@
             <img src="./imges/发现/养护/mini3.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201114</p>
             <p class="f14">插画指南</p>
@@ -149,7 +149,7 @@
             <img src="./imges/发现/养护/mini4.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">北京成都武汉miniplus201107</p>
             <p class="f14">插画指南</p>
@@ -158,7 +158,7 @@
             <img src="./imges/发现/养护/mini5.jpg" alt="">
         </div>
     </a>
-    <a href="" class="show-box">
+    <a href="/single_detail" class="show-box">
         <div class="right">
             <p class="f16">上海深圳miniplus201107</p>
             <p class="f14">插画指南</p>
