--- a/views/mix.html
+++ b/views/mix.html
@@ -56,7 +56,7 @@
 
 <body>
     <div>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">悦花</p>
                 <p class="f14">3 - 4种花材</p>
@@ -66,7 +66,7 @@
                 <img src="./imges/发现/养护/mix1.jpg" alt="">
             </div>
         </a>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">繁花</p>
                 <p class="f14">3 - 4种花材</p>
@@ -76,7 +76,7 @@
                 <img src="./imges/发现/养护/mix2.jpg" alt="">
             </div>
         </a>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">小野</p>
                 <p class="f14">6 - 10种花材</p>
@@ -86,7 +86,7 @@
                 <img src="./imges/发现/养护/mix3.jpg" alt="">
             </div>
         </a>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">野逸</p>
                 <p class="f14">10 - 12种花材</p>
@@ -96,7 +96,7 @@
                 <img src="./imges/发现/养护/mix4.jpg" alt="">
             </div>
         </a>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">大师</p>
                 <p class="f14">5 - 6种花材</p>
@@ -106,7 +106,7 @@
                 <img src="./imges/发现/养护/mix5.jpg" alt="">
             </div>
         </a>
-        <a href="" class="show-box">
+        <a href="/mini" class="show-box">
             <div class="right">
                 <p class="f16">谜藏</p>
                 <p class="f14">6 - 8种花材</p>
