--- a/views/single_bouquet.html
+++ b/views/single_bouquet.html
@@ -91,7 +91,7 @@
     <main class="main1">
         <div class="show-box">
    {{each single.china item}}
-        <a href="">
+        <a href="/single_detail">
             <div><img src="{{item.img}}" alt=""></div>
             <p>{{item.p}}</p>
         </a>
@@ -102,7 +102,7 @@
     <main class="main2">
         <div class="show-box">
              {{each single.else item}}
-        <a href="">
+        <a href="/single_detail">
             <div><img src="{{item.img}}" alt=""></div>
             <p>{{item.p}}</p>
         </a>
