--- a/www/css/detailPage/detaiPage.css
+++ b/www/css/detailPage/detaiPage.css
@@ -146,3 +146,88 @@ body {
   height: 100%;
   line-height: 48px;
 }
+.buy-show {
+  width: 100%;
+  height: 82vh;
+  position: fixed;
+  bottom: -85vh;
+  transition: all 0.6s;
+  background-color: white;
+  z-index: 999;
+}
+.buy-show > div {
+  display: flex;
+  justify-content: space-around;
+}
+.buy-show > div img {
+  width: 90px;
+  height: 90px;
+  position: relative;
+  bottom: 15px;
+}
+.buy-show > div span {
+  display: inline-block;
+  padding: 30px 20px 0;
+  color: #333333;
+  font-size: 5.3vw;
+  margin-right: 10vw;
+}
+.buy-show > div i {
+  padding-top: 15px;
+  font-size: 5.3vw;
+}
+.buy-show > section {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 3.2vw;
+  color: #333333;
+}
+.buy-show > section > div input {
+  border: none;
+  outline: none;
+}
+.buy-show > section > div img {
+  width: 18px;
+  height: 18px;
+}
+.buy-show > section > div i {
+  margin-right: 20px;
+}
+.buy-show > section > section {
+  display: inline-block;
+  color: #666;
+  padding: 7px 16px;
+  min-width: 65px;
+  line-height: 14px;
+  font-size: 14px;
+  margin: 0 16px 12px 0 ;
+  background-color: #F5F5F5;
+}
+.buy-show > section > div:nth-of-type(2) {
+  display: flex;
+}
+.buy-show > section > div:nth-of-type(2) input {
+  width: 60px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 22px;
+  height: 22px;
+  color: #333333;
+  padding: 0;
+}
+.buy-show > section > div:nth-of-type(2) img {
+  width: 22px;
+  height: 22px;
+}
+.buy-show > span {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  font-size: 14px;
+  font-weight: bolder;
+  line-height: 48px;
+  text-align: center;
+  background-color: #ff6672;
+}
