--- a/views/community-talk.html
+++ b/views/community-talk.html
@@ -80,6 +80,7 @@
     .btn {
         margin-top: 6vh;
         /* margin-bottom: 12vh; */
+        margin-bottom: 8vh;
         display: flex;
         justify-content: center;
     }
