--- a/views/fleshiness.html
+++ b/views/fleshiness.html
@@ -77,7 +77,7 @@
 
         <script>
             $(fleshinessData).each(function(index, item) {
-                console.log(item)
+                // console.log(item)
                 var str = ` <li class="swiper-slide">
                 `
                 $(item.list).each(function(index, item) {
