--- a/views/monthly.html
+++ b/views/monthly.html
@@ -9,7 +9,7 @@
 <script>
     // console.log($(monthlyData))
     $(monthlyData).each(function(index, item) {
-        console.log(item)
+        // console.log(item)
         var str = `<div class='part'>
             <div class="banner"><img src="${item.banner}"></div><div class="list">
         `
