添加了后台管理界面

--- a/views/register.html
+++ b/views/register.html
@@ -15,7 +15,7 @@
     <div class="register">
         <img src="/imges/我的/login-bg.jpg" alt="">
         <div>
-            <form action="">
+            <form action="" autocomplete="off">
                 <div>
                     <i class="glyphicon glyphicon-user"></i>
                     <input type="text" placeholder="请输入账号名" name="username">
