--- a/views/mine/mine.html
+++ b/views/mine/mine.html
@@ -3,7 +3,7 @@
 <div class="login">
     <img src="/imges/我的/login-bg.jpg" alt="">
     <div>
-        <form action="" >
+        <form action="" autocomplete="off">
             <div>
                 <i class="glyphicon glyphicon-user"></i>
                 <input type="text" placeholder="请输入账号名" name="username">
