我的小工具

--- a/views/mine/mine.html
+++ b/views/mine/mine.html
@@ -169,6 +169,15 @@
     $('.userTop>div>section').click(function(){
         location.href='/all'
     })
+    $('.myServe li').eq(0).click(function(){
+        location.href='/active_99'
+    })
+    $('.myServe li').eq(1).click(function(){
+        location.href='/teacher'
+    })
+    $('.myServe li').eq(2).click(function(){
+        location.href='/come_buy'
+    })
 </script>
 </body>
 
