--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,9 @@
             </div>
         </div>
         <div class="swiper-container main-pics">
-            <div class="swiper-wrapper"></div>
+            <div class="swiper-wrapper">
+                
+            </div>
             <!-- 如果需要分页器 -->
             <div class="swiper-pagination swiper-pagination-fraction"></div>
         </div>
