--- a/views/Administrator/FlowerAdmin/addFlower.html
+++ b/views/Administrator/FlowerAdmin/addFlower.html
@@ -50,6 +50,12 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="twoname" class="col-sm-2 control-label">销售量</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="twoname" placeholder="请输入销售量" name="count">
+            </div>
+          </div>
+          <div class="form-group">
             <label for="twoname" class="col-sm-2 control-label">轮播图片</label>
             <div class="col-sm-10">
                 <textarea class="form-control" rows="3" placeholder="每个图片地址请用英文的逗号(,)区分开" name="banner"></textarea>
