--- a/views/Administrator/FlowerAdmin/addFlower.html
+++ b/views/Administrator/FlowerAdmin/addFlower.html
@@ -5,17 +5,19 @@
             <label for="" class="col-sm-2 control-label">商品页面</label>
             <div class="col-sm-10">
                 <select class="form-control" name="page">
-                    <option>index/list1</option>
-                    <option>index/list2</option>
-                    <option>index/list3</option>
-                    <option>index/list4</option>
-                    <option>monthly/list1</option>
-                    <option>monthly/list2</option>
-                    <option>gift</option>
-                    <option>search</option>
-                    <option>moreF</option>
-                    <option>home/list</option>
-                    <option>home/new</option>
+                  <option>index/list1</option>
+                  <option>index/list2</option>
+                  <option>index/list3</option>
+                  <option>index/list4</option>
+                  <option>monthly/list1</option>
+                  <option>monthly/list2</option>
+                  <option>monthly/list3</option>
+                  <option>gift</option>
+                  <option>search/list1</option>
+                  <option>search/list2</option>
+                  <option>moreF</option>
+                  <option>home/list</option>
+                  <option>home/new</option>
                 </select>
             </div>
           </div>
