--- a/views/home.html
+++ b/views/home.html
@@ -39,17 +39,17 @@
     <h1>新品推荐</h1>
     <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
         <ul id="swiper-wrapper-5166ce487d6f5cbe" class="swiper-wrapper" aria-live="polite">
-            {{each data.new item index}}
+            {{each news datas}}
             <li class="swiper-slide" role="group" aria-label="({{index}}+1) /3"  >
-                {{each item news}}
-                <div class="lb-box toDetail"  data-id="home/1-{{a}}">
+                {{each datas items}}
+                <div class="lb-box toDetail"  data-id="home/1-{{index}}">
                     <div class="img">
-                        <img src="{{news.img}}" alt="">
+                        <img src="{{items.img[0]}}" alt="">
                         <div>NEW</div>
                     </div>
                     <div class="title">
-                        <p>{{news.title}}</p>
-                    <p><span>￥{{news.newPrice}}</span><del class="old">￥{{ news.oldPrice}}</del></p>
+                        <p>{{items.h}}</p>
+                    <p><span>￥{{items.price}}</span><del class="old">￥{{ items.oldPrice}}</del></p>
                     </div>
                     
                 </div>
@@ -71,17 +71,17 @@
 
 <div class="show_box">
     <h1>热卖专区</h1>
-    {{each data.list item a}}
-    <div class="list toDetail" data-id="home/{{a}}">
+    {{each list item }}
+    <div class="list toDetail" data-id="home/{{index}}">
         <div class="list_img">
-            <img src="{{item.img}}" alt="">
+            <img src="{{item.img[0]}}" alt="">
             <p class="tips">{{item.top}}</p>
         </div>
         <div class="title">
-            <p>{{item.title}}</p>
-            <p><span>￥{{item.newPrice}}</span>
+            <p>{{item.h}}</p>
+            <p><span>￥{{item.price}}</span>
                 <del class="old">￥{{item.oldPrice}}</del>
-                <span class=" num">月售{{item.num}}</span>
+                <span class=" num">月售{{item.count}}</span>
             </p>
         </div>
     </div>
@@ -160,7 +160,7 @@
 
     });
     $('.toDetail').click(function(){
-        location.href='/detailPage?id=index/1-4'
+        location.href='/detailPage?id='+$(this).data("id")
     })
 </script>
 </body>
